Bug fix on Safari, and style change for Firefox

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -79,6 +79,10 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
 
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 /* Arrow button */
 
 form button {
